feat(api): add user activation
